--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "big-integer": "^1.6.32",
     "busboy": "^0.2.14",
+    "jssha": "^2.3.1",
     "koa": "^2.5.1",
     "koa-logger": "^3.2.0",
     "koa-session-minimal": "^3.0.4",
